# dendros

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: api.rst  conf.py  index.rst  mcmc.rst  quickstart.rst  requirements.txt
examples/: quickstart.ipynb
src/dendros/: __init__.py  _analyses.py  _collection.py  _galaxy_history.py  _outputs.py  _star_formation.py
src/dendros/_mcmc/: __init__.py  _analysis.py  _autocorr.py  _chains.py  _config.py  _convergence.py  _grubbs.py  _mvn_reparam.py  _params.py  _plots.py  _projection.py  _run.py
tests/: conftest.py  test_analyses.py  test_completion.py  test_galaxy_history.py  test_mcmc_analysis.py  test_mcmc_autocorr.py  test_mcmc_chains.py  test_mcmc_config.py  test_mcmc_convergence.py  test_mcmc_params.py  test_mcmc_plots.py  test_outputs.py  test_properties.py  test_read.py  test_star_formation.py
