[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dendros"
version = "0.0.1"
authors = [
  { name="Andrew Benson", email="abenson@carnegiescience.edu" },
]
description = "A Python toolkit for analyzing Galacticus semi-analytic model outputs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
"Homepage" = "https://github.com/galacticusorg/dendros"
