[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dendros"
version = "0.2.0"
authors = [
  { name="Andrew Benson", email="abenson@carnegiescience.edu" },
]
description = "A Python toolkit for analyzing Galacticus semi-analytic model outputs."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "h5py>=3.0",
    "numpy>=1.20",
    "astropy>=5.0",
    "scipy>=1.7",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
tabulate = ["tabulate>=0.10.0"]
mcmc = [
    "corner>=2.2",
    "matplotlib>=3.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pandas>=1.3",
    "corner>=2.2",
    "matplotlib>=3.5",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
    "nbsphinx>=0.8",
]

[project.urls]
"Homepage" = "https://github.com/galacticusorg/dendros"
"Documentation" = "https://dendros.readthedocs.io"
"Bug Tracker" = "https://github.com/galacticusorg/dendros/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
